# Bpp

./: .cursorignore  .cursorrules  .gitignore  100_llvm_ll_params_branch_fixture_success.ll  100_llvm_ll_params_branch_fixture_success.llvm.out  101_llvm_build_call_branch_fixture_success.ll  101_llvm_build_call_branch_fixture_success.llvm.out  102_llvm_build_loop_fixture_success.ll  102_llvm_build_loop_fixture_success.llvm.out  103_llvm_build_bitwise_fixture_success.ll  103_llvm_build_bitwise_fixture_success.llvm.out  104_llvm_build_call_ptr_fixture_success.ll  104_llvm_build_call_ptr_fixture_success.llvm.out  105_llvm_build_float_fixture_success.ll  105_llvm_build_float_fixture_success.llvm.out  106_llvm_build_narrow_sig_fixture_success.ll  106_llvm_build_narrow_sig_fixture_success.llvm.out  26_global_state_init_suite.out  26_global_state_init_suite.s  89_number_alias_prelude_success.s  95_llvm_ll_skeleton_fixture_success.ll  95_llvm_ll_skeleton_fixture_success.llvm.out  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  bpp.toml  build_and_test.ps1  build_and_test.sh  config.ini  main.s  number_alias_probe.out  number_alias_probe.s  syntax.md  tmp_v4_parse_test.bpp
.github/: release-allowlist.txt
.github/instructions/: common.instructions.md
.github/workflows/: bootstrap-release.yml  bot-clean-main.yml  ci.yml  fuzz-nightly.yml  promote-base.yml  release-files-only.yml
bench/: optimization_thresholds.tsv  run_incremental_cache_probe.sh  run_microbench.sh  run_tagged_pointer_fastpaths.sh  tagged_pointer_fastpaths.bpp
build-linux/: CMakeCache.txt  Makefile  bpp  bpp_toolchain.env  cmake_install.cmake  install_manifest.txt
cmake/: BppToolchain.cmake  WindowsSmoke.cmake  bpp_launcher.sh.in
docs/: GRAMMAR_SPEC.md  algorithm_language_roadmap.md  benchmark_tuning.md  compiler_optimization_todo.md  roadmap.md  roadmap2.md  syntax.md  todo.md  v4_consistency_policy.md  v4_todo.md  v5_todo.md  v6_todo.md  v7_todo.md  v8_todo.md  windows_support.md
docs/wiki/: Annotations-and-Decorators.md  Bpp-Manifesto.md  Compiler-Internals.md  Compiler-Known-Prelude.md  Contract-Checklist.md  Contributing.md  Current-Limitations.md  Declarations.md  Diagnostics-and-Errors.md  Expressions.md  Functions-and-Calls.md  Generics.md  Getting-Started.md  Home.md  LLVM-Contract-Boundary.md  Language-Reference.md  Language-Scope.md  Lexical-Rules.md  Modules-and-Name-Resolution.md  Number.md  Object-Construction.md  README.md  Runtime-and-LLVM-Bundles.md  Statements-and-Control-Flow.md  Struct-Impl-and-Inheritance.md  Tagged-Metadata.md  Testing-and-CI.md  Traits-and-Virtual-Dispatch.md  Type-System.md  _Sidebar.md
fuzz/: README.md  generate_seed_corpus.sh  run_fuzz.sh  triage_crash.sh
fuzz/lib/: common.sh
old/v1/: build_and_test.sh  config.ini
old/v10/: build_and_test.sh  config.ini  syntax.md
old/v2/: config.ini
old/v3/: config.ini
old/v4/: config.ini  todo.md
old/v6/: config.ini  todo.md
old/v7/: config.ini
old/v8/: config.ini  todo.md
old/v9/: build_and_test.sh
scripts/: cleanup_main_release_tree.sh  list_disallowed_release_files.sh  publish_wiki.sh
src/: ast.bpp  codegen.bpp  compiler.bpp  lexer.bpp  main.bpp  module_utils.bpp  opt.bpp  ssa.bpp  types.bpp
src/compiler/: annotations.bpp  ast_dump.bpp  ast_lowering.bpp  call_utils.bpp  core_utils.bpp  enum_runtime.bpp  generic_core.bpp  generic_engine.bpp  generic_pass.bpp  loader.bpp  lowering.bpp  manifest.bpp  module_path.bpp  monomorph.bpp  pass_runner.bpp  resolver.bpp  runtime_api.bpp  source_cache.bpp  struct_layout.bpp  super_lowering.bpp  symbol_runtime.bpp  trait_runtime.bpp  try_runtime.bpp  validation.bpp  virtual_dispatch_runtime.bpp
src/emitter/: emitter.bpp  gen_expr.bpp  gen_stmt.bpp  symtab.bpp  typeinfo.bpp
src/llvm/: contract_adapter.bpp  contract_core.bpp  contract_emit.bpp  contract_types.bpp  contract_verify.bpp  lower_ssa.bpp
src/parser/: decl.bpp  decl_impl.bpp  expr.bpp  expr_lambda.bpp  expr_match.bpp  stmt.bpp  type.bpp  util.bpp
src/ssa/: backend_contract.bpp  builder.bpp  codegen.bpp  core.bpp  datastruct.bpp  destroy.bpp  dump.bpp  ipa.bpp  loop3.bpp  lower_phys.bpp  mem2reg.bpp  mem2reg_df.bpp  memoryssa2.bpp  opt_o1.bpp  opt_pipeline.bpp  proof.bpp  regalloc.bpp  specialize.bpp  vector_ir.bpp
src/std/: char.bpp  hashmap.bpp  io.bpp  mem.bpp  mod_number.bpp  number.bpp  option.bpp  os.bpp  os_windows.bpp  path.bpp  result.bpp  str.bpp  string.bpp  string_builder.bpp  util.bpp  vec.bpp
test/: 00_test_form.bpp  fuzz_smoke.sh  run_regression.sh  run_tests.ps1  run_tests.sh
test/manual/: parser_error_test.bpp  trace_test.bpp
test/source/: 01_arith_bit_cmp.bpp  02_control_flow_loops.bpp  03_match_enum_string.bpp  03_property_hooks_suite.bpp  03_switch_enum_string.bpp  04_bool_and_signed_int_primitives_success.bpp  04_functions_recursion_fp.bpp  05_pointers_arrays.bpp  06_slices_strings.bpp  07_structs.bpp  07_try_catch_finally_throw_success.bpp  08_entry_annotation_changes_program_entry_success.bpp  08_methods_instance_static_suite.bpp  09_function_type_signature_success.bpp  09_struct_return.bpp  100_llvm_ll_params_branch_fixture_success.bpp  100_number_parse_roundtrip_success.bpp  100_str_eq_slice_literal_success.bpp  101_llvm_build_call_branch_fixture_success.bpp  101_ssa_parallel_copy_phi_success.bpp  102_llvm_build_loop_fixture_success.bpp  103_llvm_build_bitwise_fixture_success.bpp  104_llvm_build_call_ptr_fixture_success.bpp  105_llvm_build_float_fixture_success.bpp  106_llvm_build_narrow_sig_fixture_success.bpp  107_llvm_build_small_struct_abi_success.bpp  108_bool_and_signed_int_primitives_success.bpp  108_llvm_build_large_struct_abi_success.bpp  109_default_named_and_variadic_direct_call_success.bpp  109_llvm_build_phi_merge_success.bpp  10_generics.bpp  10_lambda_explicit_capture_modes_success.bpp  (+251 more)
tools/: nasm_split_assemble.sh  package_linux_release.sh
v1/: config.ini
v10/: build_and_test.sh
v11/: build_and_test.ps1  syntax.md
v4/: build_and_test.sh  syntax.md  todo.md
v5/: build_and_test.sh  config.ini
v8/: build_and_test.sh
v9/: config.ini  todo.md
(+901 files in other folders)
